Lab sample unique identifier

--- a/veoc/templates/veoc/truck_driver_profile.html
+++ b/veoc/templates/veoc/truck_driver_profile.html
@@ -725,7 +725,7 @@
             }else{
               Swal.fire({
                 title: 'Success!',
-                text: 'Lab Details Submitted',
+                text: 'Lab Details Submitted.\n Lab Sample ID  :'+data.sample_identifier,
                 icon: 'success'
               });
               labForm[0].reset();
