--- a/veoc/templates/veoc/truck_driver_profile.html
+++ b/veoc/templates/veoc/truck_driver_profile.html
@@ -802,7 +802,7 @@
         {% for lab in lab_res %}
             {% if forloop.last %}
                 {% for l in patient_details %}
-                    msg = "UUID : {{ lab.test_sample_uuid }}"
+                    msg = "{{ lab.test_sample_uuid }}"
 {#                    msg = "Names : {{ lab.patient_contacts.first_name }} {{ lab.patient_contacts.last_name }} \nID/Passport No : {{ lab.patient_contacts.passport_number }} \nPhone No : {{ lab.patient_contacts.phone_number }}" +#}
 {#                    " \nCompany : {{ l.company_name }} \nLab : {{ lab.lab.name }} \nLab Results: {{ lab.lab_results }}";#}
                     qrcode.makeCode(msg)
